2006-10-02  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets-plugins/hildon-color-chooser-dialog-hsv.c: Make ok
	the default response for the dialog. Fixes NB#39910.

2006-09-29  Tomas Junnonen  <tomas.junnonen@nokia.com>

	* hildon-font-selection-dialog.c: Remove extra space in font size
	string. Fixes NB#41291.

2006-09-26  Iain Holmes  <iain@openedhand.com>

	* hildon-wizard-dialog.c: Show all created widgets so that a
	gtk_widget_show is all that is required to display the dialog
	correctly. Fixes MB#432. 

2006-09-25  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets/hildon-number-editor.c: Applying a patch by Fernando
	Herrera to fix the number editor notification signals. Fixes MB#625. 

2006-09-22  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
	
	[0.14.4-1 release]
	
	* configure.ac:
	* debian/changelog: Update.

2006-09-21  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* hildon-widgets/hildon-find-toolbar.c
	(hildon_find_toolbar_entry_activate): Stop 'activate' signal emission
	to prevent focus from moving. NB#40936

2006-09-22  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* hildon-widgets/hildon-volumebar.h (HildonVolumebarPrivate)
	* hildon-widgets/hildon-volumebar.c (hildon_volumebar_size_allocate,
	hildon_volumebar_realize, hildon_volumebar_unrealize,
	hildon_volumebar_map, hildon_volumebar_unmap,
	hildon_volumebar_notify, hildon_volumebar_class_init): Add a
	input-only event window to catch button-press events anywhere in the
	widget when the widget is insensitive. NB#6214

	* hildon-widgets/hildon-hvolumebar.c (hildon_hvolumebar_size_allocate): 
	* hildon-widgets/hildon-vvolumebar.c (hildon_vvolumebar_size_allocate): 
	Chain to parent so that the event window is properly resized.

2006-09-22  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets-plugins/hildon-color-chooser-dialog-hsv.c: